--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="container">
             <!-- <div class="square"></div> -->
         </div>
+        <h2 class="final_result"></h2>
     </main>
 
     <footer>
