--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <!-- <div class="square"></div> -->
         </div>
-        <h2 class="final_result"></h2>
+        <h2 id="final_result"></h2>
     </main>
 
     <footer>
