add-final-layer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <main>
         <div class="container">
             <!-- <div class="square"></div> -->
+            <!-- <div class="final_layer"></div> -->
         </div>
         <h2 id="final_result"></h2>
     </main>
