--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>CAMPO MINATO</h1>
+        <img src="img/logo.png" alt="logo" id="logo">
         <div class="buttons">
             <select name="difficult" id="difficult">
                 <option value="100">Facile</option>
@@ -23,6 +24,7 @@
 
     <main>
         <div class="container">
+            <h3>SELEZIONA UN LIVELLO DI DIFFICOLTA' E PROVA AD EVITARE LE 16 BOMBE.</h3>
             <!-- <div class="square"></div> -->
             <!-- <div class="final_layer"></div> -->
         </div>
